--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ POSTGRES_PASSWORD=your_postgres_password
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
-MAIL_USERNAME=jerry0907zheng@gmail.com
-MAIL_PASSWORD=eidk padh vlmi bbus
+MAIL_USERNAME=yourgmail@gmail.com
+MAIL_PASSWORD=mailpassword
