--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,11 +7,24 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+      - /app/.angular/cache
     ports:
       - "4200:4200"
     environment:
       - CHOKIDAR_USEPOLLING=true
     container_name: angular-dev
+  test:
+    build:
+      context: ./frontend
+      dockerfile: test/Dockerfile.dev
+    depends_on:
+      - frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "4100:4100"
+    container_name: test-dev
 
   backend:
     build:
