--- a/.env.0example
+++ b/.env.0example
@@ -1,6 +1,5 @@
 DB_SERVER=db
 DB_PORT=5432
-DB_NAME=your_database
 DB_USER=your_postgres_user
 DB_PASSWORD=your_postgres_password
 #POSTGRES
@@ -13,3 +12,7 @@ MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=yourgmail@gmail.com
 MAIL_PASSWORD=mailpassword
+#Prime administrator
+ADMIN_USERNAME=Jerry
+ADMIN_EMAIL=yourgmail@gmail.com
+ADMIN_PASSWORD=adminpassword
