--- a/docker-compose.1dev.yml
+++ b/docker-compose.1dev.yml
@@ -13,19 +13,6 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     container_name: angular-dev
-  test:
-    build:
-      context: ./frontend
-      dockerfile: test/Dockerfile.dev
-    depends_on:
-      - frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    ports:
-      - "4100:4100"
-    container_name: test-dev
-
   backend:
     build:
       context: ./backend
@@ -35,20 +22,19 @@ services:
     ports:
       - "5000:5000"
     env_file:
-      - ./backend/.env
+      - .env
+      - .env.1dev
     depends_on:
       - db
     container_name: flask-dev
-
   db:
     image: postgres:16
     ports:
       - "5432:5432"
     env_file:
-      - backend/.env
+      - .env
     volumes:
-      - pgdata_dev:/var/lib/postgresql/data
+      - ./database/postgres_data:/var/lib/postgresql/data
     container_name: pg-dev
-
 volumes:
   pgdata_dev:
