--- a/env/.env.0example
+++ b/env/.env.0example
@@ -1,5 +1,6 @@
 DB_SERVER=db
 DB_PORT=5432
+DB_NAME=your_SQLname
 DB_USER=your_postgres_user
 DB_PASSWORD=your_postgres_password
 #POSTGRES
@@ -13,6 +14,12 @@ MAIL_USE_TLS=True
 MAIL_USERNAME=yourgmail@gmail.com
 MAIL_PASSWORD=mailpassword
 #Prime administrator
-ADMIN_USERNAME=Jerry
-ADMIN_EMAIL=yourgmail@gmail.com
-ADMIN_PASSWORD=adminpassword
+ADMIN_USERNAME=your_username
+ADMIN_PASSWORD=your_password
+ADMIN_EMAIL=your_email
+#Test
+TEST_USERNAME=Test
+TEST_PASSWORD=123
+TEST_EMAIL=Blyat@gmail.com
+#Key
+JWT_SECRET_KEY=your_secret_key
