--- a/docker-compose.3prod.yml
+++ b/docker-compose.3prod.yml
@@ -32,5 +32,17 @@ services:
     ports:
       - "6379:6379"
     container_name: redis-prod
+  celery:
+    build:
+      context: ./celery
+      dockerfile: Dockerfile.prod
+    command: celery -A celery_worker worker --loglevel=info
+    env_file:
+      - .env
+      - .env.3prod
+    depends_on:
+      - redis
+      - backend
+    container_name: celery-prod
 volumes:
   pgdata_prod:
