--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,9 @@ __pycache__/
 /Backend/.DS_Store
 /Backend/Thumbs.db
 /Backend/static/uploads/
-Backend/instance/
+/Backend/instance/
+/Backend/celerybeat-schedule
+/Backend/celery_worker/celerybeat-schedule
 
 # Database
 /database/
