--- a/docker-compose.2test.yml
+++ b/docker-compose.2test.yml
@@ -50,19 +50,37 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
-    container_name: redis-test
-  celery:
+    container_name: redis
+  celery_worker:
     build:
-      context: ./backend
-      dockerfile: Dockerfile.dev
-    command: celery -A app.celery worker --loglevel=info
+      context: Backend/celery_worker
+      dockerfile: Dockerfile
+    command: celery -A celery_worker worker --loglevel=info
+    volumes:
+      - ./Backend:/app/Backend
+    environment:
+      - PYTHONPATH=/app/Backend
     env_file:
       - .env
       - .env.2test
     depends_on:
       - redis
-      - backend
-    container_name: celery-test
+    container_name: celery-worker-test
+  celery_beat:
+    build:
+      context: Backend/celery_worker
+      dockerfile: Dockerfile
+    command: celery -A celery_worker beat --loglevel=info
+    volumes:
+      - ./Backend:/app/Backend
+    environment:
+      - PYTHONPATH=/app/Backend
+    env_file:
+      - .env.2test
+    depends_on:
+      - redis
+      - celery_worker
+    container_name: celery-beat-test
 networks:
   mynet:
     driver: bridge
