--- a/Frontend/nginx/default.conf
+++ b/Frontend/nginx/default.conf
@@ -1,16 +1,49 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name _;
 
+  # Gzip 壓縮已在 nginx.conf 中全域設定
+
+  # Angular 靜態檔
+  root /usr/share/nginx/html;
+  index index.html;
+
+  # 安全性標頭
+  add_header X-Frame-Options "SAMEORIGIN" always;
+  add_header X-Content-Type-Options "nosniff" always;
+  add_header X-XSS-Protection "1; mode=block" always;
+  add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+  # 主要路由 - Angular 路由
   location / {
-    root /usr/share/nginx/html;
-    index index.html;
     try_files $uri $uri/ /index.html;
+    
+    # 靜態資源快取
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+      expires 1y;
+      add_header Cache-Control "public, immutable";
+    }
   }
 
-  location /api/ {
-    proxy_pass http://backend:5000/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
+  # 健康檢查端點
+  location /healthz {
+    access_log off;
+    return 200 "healthy\n";
+    add_header Content-Type text/plain;
+  }
+
+  # 錯誤頁面配置
+  include /etc/nginx/conf.d/error.conf;
+
+  # 404 錯誤頁面
+  location = /404.html {
+      internal;
+      root /usr/share/nginx/html;
+  }
+
+  # 50x 錯誤頁面
+  location = /50x.html {
+      internal;
+      root /usr/share/nginx/html;
   }
 }
