Connection Pooling the PostgreSQL database and updated the .env.example file.

--- a/.env.0example
+++ b/.env.0example
@@ -3,23 +3,41 @@ DB_PORT=5432
 DB_NAME=your_SQLname
 DB_USER=your_postgres_user
 DB_PASSWORD=your_postgres_password
+
 #POSTGRES
 POSTGRES_DB=your_database
 POSTGRES_USER=your_postgres_user
 POSTGRES_PASSWORD=your_postgres_password
+
 #Mail
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=yourgmail@gmail.com
 MAIL_PASSWORD=mailpassword
+
 #Prime administrator
 ADMIN_USERNAME=your_username
 ADMIN_PASSWORD=your_password
 ADMIN_EMAIL=your_email
+
 #Test
 TEST_USERNAME=Test
 TEST_PASSWORD=123
 TEST_EMAIL=Blyat@gmail.com
+
 #Key
 JWT_SECRET_KEY=your_secret_key
+
+# URL
+FRONTEND_URL=http://localhost:4200
+API_URL=http://localhost:5000
+REDIS_URL=redis://redis:6379/0
+
+# 資料庫連線池設定
+DB_POOL_SIZE=10       # 連線池大小（預設：10）
+DB_MAX_OVERFLOW=20    # 最大溢出連線數（預設：20）
+DB_POOL_TIMEOUT=30    # 連線超時秒數（預設：30）
+DB_POOL_RECYCLE=3600  # 連線回收時間秒數（預設：3600，1小時）
+DB_POOL_PRE_PING=true # 連線前檢查（預設：true）
+DB_ECHO=false         # SQL 語句回顯（預設：false，除錯時可設為 true）
